<resources>
    <string name="app_name">NoteDispatcher</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message.</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="action_search">Search</string>
    <string name="action_quit">Quit</string>
    <string name="action_send_message">Send Message</string>
    <string name="action_add_contact">Add Contact</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_select_contact">SelectContact</string>
    <string name="search_phone_contact">Search</string>
</resources>
