<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:notedispatcher="http://schemas.android.com/apk/res-auto" >
    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_search"
        android:icon="@mipmap/ic_action_search"
        android:title="@string/action_search"
        notedispatcher:showAsAction="ifRoom" />
    <item android:id="@+id/action_add_contact"
        android:icon="@mipmap/ic_action_add_person"
        android:title="@string/action_add_contact"
        notedispatcher:showAsAction="ifRoom" />
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        notedispatcher:showAsAction="never" />
    <item android:id="@+id/action_send_message"
        android:title="@string/action_send_message"
        notedispatcher:showAsAction="never" />
    <item android:id="@+id/action_quit"
        android:title="@string/action_quit"
        notedispatcher:showAsAction="never" />

</menu>